--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,49 @@
 asn1crypto==0.24.0
 attrs==17.4.0
 Automat==0.6.0
+backcall==0.1.0
 certifi==2018.1.18
 cffi==1.11.5
 chardet==3.0.4
+colorama==0.3.9
 constantly==15.1.0
+coverage==4.5.1
 cryptography==2.2.1
 cssselect==1.0.3
 cycler==0.10.0
+decorator==4.2.1
 dj-database-url==0.4.2
 Django==2.0.2
 django-bootstrap3==9.1.0
 django-bootstrap4==0.0.6
+django-braces==1.12.0
 django-heroku==0.3.1
+-e git+https://github.com/novapost/django-highcharts.git@34dd1b644325aaf8d9772feaf09827c730e8b154#egg=django_highcharts
 ez-setup==0.9
 gunicorn==19.7.1
 hyperlink==18.0.0
 idna==2.6
 incremental==17.5.0
+ipython==6.3.1
+ipython-genutils==0.2.0
+jedi==0.11.1
+kiwisolver==1.0.1
+leaflet==0.0.3
 lxml==4.2.1
 matplotlib==2.1.2
 numpy==1.14.0
+openpyxl==1.8.6
+pandas==0.14.0
 parsel==1.4.0
+parso==0.1.1
+pickleshare==0.7.4
+prompt-toolkit==1.0.15
 psycopg2==2.7.3.2
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
 pycparser==2.18
 PyDispatcher==2.0.5
+pygments==2.2.0
 pyOpenSSL==17.5.0
 pyparsing==2.2.0
 python-dateutil==2.6.1
@@ -36,11 +53,17 @@ queuelib==1.5.0
 requests==2.18.4
 scikit-learn==0.19.1
 scipy==1.0.0
+seaborn==0.8.1
 selenium==3.11.0
 service-identity==17.0.0
+simplegeneric==0.8.1
 six==1.11.0
 sklearn==0.0
+traitlets==4.3.2
+typing==3.6.4
 urllib3==1.22
 w3lib==1.19.0
+wcwidth==0.1.7
 whitenoise==3.3.1
+win-unicode-console==0.5
 zope.interface==4.4.3
