--- a/requirements.txt
+++ b/requirements.txt
@@ -1,71 +1,52 @@
-argon2-cffi==18.1.0
-asgi-redis==1.4.3
-asgiref==1.1.2
 asn1crypto==0.24.0
-attrs==17.4.0
 Automat==0.6.0
-awesome-slugify==1.6.5
-beautifulsoup4==4.6.0
-bleach==2.1.3
 certifi==2018.1.18
 cffi==1.11.5
-chardet==3.0.4
+colorama==0.3.9
 constantly==15.1.0
+coverage==4.5.1
 cryptography==2.2.1
 cssselect==1.0.3
 cycler==0.10.0
-defusedxml==0.5.0
-dj-database-url==0.5.0
-Django==2.0.5
-django-angular==2.0.3
+decorator==4.2.1
+dj-database-url==0.4.2
+Django==2.0.2
 django-bootstrap3==9.1.0
 django-bootstrap4==0.0.6
+django-braces==1.12.0
 django-heroku==0.3.1
+-e git+https://github.com/novapost/django-highcharts.git@34dd1b644325aaf8d9772feaf09827c730e8b154#egg=django_highcharts
 ez-setup==0.9
 gunicorn==19.7.1
-html5lib==1.0.1
 hyperlink==18.0.0
-idna==2.6
-incremental==17.5.0
-lxml==4.2.1
 matplotlib==2.1.2
-msgpack-python==0.5.6
-mysql-connector-python==2.1.7
-mysqlclient==1.3.4
 numpy==1.14.0
-oauthlib==2.0.7
+openpyxl==1.8.6
+pandas==0.14.0
+pandas-highcharts==0.5.2
 parsel==1.4.0
 psycopg2==2.7.3.2
 pyasn1==0.4.2
 pyasn1-modules==0.2.1
 pycparser==2.18
 PyDispatcher==2.0.5
-PyJWT==1.6.1
-PyMySQL==0.8.0
+pygments==2.2.0
 pyOpenSSL==17.5.0
 pyparsing==2.2.0
 python-dateutil==2.6.1
 python-decouple==3.1
-python3-openid==3.1.0
-pytz==2018.4
+pytz==2017.3
 queuelib==1.5.0
-redis==2.10.6
-regex==2018.2.21
 requests==2.18.4
-requests-oauthlib==0.8.0
 scikit-learn==0.19.1
 scipy==1.0.0
+seaborn==0.8.1
 selenium==3.11.0
-service-identity==17.0.0
-six==1.11.0
+simplegeneric==0.8.1
 sklearn==0.0
-social-auth-app-django==2.1.0
-social-auth-core==1.7.0
-Unidecode==0.4.21
 urllib3==1.22
-virtualenv==15.1.0
-virtualenvwrapper-win==1.2.5
 w3lib==1.19.0
-webencodings==0.5.1
 whitenoise==3.3.1
 zope.interface==4.4.3
+social-auth-app-django==2.1.0
+social-auth-core==1.7.0
